[package]
name    = "netcrawler"
version = "0.1.5"
edition = "2021"

[dependencies]
anyhow     = "1"
regex      = "1"
once_cell  = "1.19"
petgraph   = "0.6"
tempfile   = "3"
threadpool       = "1.8"
crossbeam-channel = "0.5.11"
dashmap          = "5"
num_cpus         = "1"
ssh2 = { version = "0.9.2", default-features = false, features = ["vendored-openssl"] }
